fixed the black boarder on the white text to be a bit more readable

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ img {
       transition: background-color 0.3s;
       border-radius: 5px;
 
-      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      /*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+      text-shadow: 0 0 5px black;
       font-size: 20px;
     }
 
